tree-sitter-duck/test/corpus/statements.txt
====================
Assignment
====================

fn f():
    x = 1
    x.y += 2
    x[0] %= 3
    p.*= 4

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (expression_statement
        (assignment_expression
          (identifier)
          (integer)))
      (expression_statement
        (assignment_expression
          (field_expression
            (identifier)
            (identifier))
          (integer)))
      (expression_statement
        (assignment_expression
          (index_expression
            (identifier)
            (integer))
          (integer)))
      (expression_statement
        (assignment_expression
          (dereference_expression
            (identifier))
          (integer))))))

====================
If
====================

fn f():
    if a:
        pass
    else if b:
        pass
    else:
        pass

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (if_statement
        (identifier)
        (block
          (pass_statement))
        (else_clause
          (if_statement
            (identifier)
            (block
              (pass_statement))
            (else_clause
              (block
                (pass_statement)))))))))

====================
Loops
====================

fn f():
    for p in primes:
        continue
    for i, (k, _) in pairs:
        pass
    for _, x in xs:
        pass
    for n in t.0..len - 1:
        pass
    for i, &var x in xs:
        pass
    for &_ in xs:
        pass
    while true:
        break

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (for_statement
        (identifier)
        (identifier)
        (block
          (expression_statement
            (continue_expression))))
      (for_statement
        (identifier)
        (tuple_pattern
          (identifier)
          (discard))
        (identifier)
        (block
          (pass_statement)))
      (for_statement
        (discard)
        (identifier)
        (identifier)
        (block
          (pass_statement)))
      (for_statement
        (identifier)
        (range
          (field_expression
            (identifier)
            (tuple_index))
          (binary_expression
            (identifier)
            (integer)))
        (block
          (pass_statement)))
      (for_statement
        (identifier)
        (pointer_binding
          (identifier))
        (identifier)
        (block
          (pass_statement)))
      (for_statement
        (pointer_binding
          (discard))
        (identifier)
        (block
          (pass_statement)))
      (while_statement
        (boolean)
        (block
          (expression_statement
            (break_expression)))))))

====================
Return
====================

fn f():
    return
fn g() -> i32:
    return 1

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (expression_statement
        (return_expression))))
  (function_declaration
    (identifier)
    (parameters)
    (named_type
      (identifier))
    (block
      (expression_statement
        (return_expression
          (integer))))))

====================
Defer
====================

fn f():
    defer close(h)
    defer heap = mark
    defer:
        x = 1
        defer pass_through()
        pass
    pass

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (defer_statement
        (call_expression
          (identifier)
          (arguments
            (identifier))))
      (defer_statement
        (assignment_expression
          (identifier)
          (identifier)))
      (defer_statement
        (block
          (expression_statement
            (assignment_expression
              (identifier)
              (integer)))
          (defer_statement
            (call_expression
              (identifier)
              (arguments)))
          (pass_statement)))
      (pass_statement))))

====================
Nested blocks dedent together
====================

fn f():
    if a:
        if b:
            x()
let y = 1

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (if_statement
        (identifier)
        (block
          (if_statement
            (identifier)
            (block
              (expression_statement
                (call_expression
                  (identifier)
                  (arguments)))))))))
  (binding
    (identifier)
    (integer)))

====================
Blank and comment lines
====================

fn f():
    a()

        # deeper
    # same
# shallower
    b() # trailing

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (expression_statement
        (call_expression
          (identifier)
          (arguments)))
      (comment)
      (comment)
      (comment)
      (expression_statement
        (call_expression
          (identifier)
          (arguments))
        (comment)))))

====================
Line breaks inside brackets
====================

fn f():
    g(a,
  b)
    let xs = [
1,
        2,
    ]

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (identifier)
            (identifier))))
      (binding
        (identifier)
        (list
          (integer)
          (integer))))))

====================
Pipe lines
====================

fn f():
    let a = load()
        # first
        |> clean(_)

      |> render(_)
    if a
        |> ok(_):
        pass
    return a

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (binding
        (identifier)
        (pipe_expression
          (pipe_expression
            (call_expression
              (identifier)
              (arguments))
            (comment)
            (call_expression
              (identifier)
              (arguments
                (placeholder))))
          (call_expression
            (identifier)
            (arguments
              (placeholder)))))
      (if_statement
        (pipe_expression
          (identifier)
          (call_expression
            (identifier)
            (arguments
              (placeholder))))
        (block
          (pass_statement)))
      (expression_statement
        (return_expression
          (identifier))))))

====================
No trailing newline
====================

fn f():
	if a:
		b()

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (if_statement
        (identifier)
        (block
          (expression_statement
            (call_expression
              (identifier)
              (arguments))))))))

====================
Match
====================

fn f():
    match g(s):
        .circle(r):
            pass
        .rect((w, _)):
            return
        .empty:
            pass
        other:
            pass
        else:
            pass
    match c:
        else:
            pass

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (match_statement
        (call_expression
          (identifier)
          (arguments
            (identifier)))
        (match_arm
          (variant_pattern
            (identifier)
            (identifier))
          (block
            (pass_statement)))
        (match_arm
          (variant_pattern
            (identifier)
            (tuple_pattern
              (identifier)
              (discard)))
          (block
            (expression_statement
              (return_expression))))
        (match_arm
          (variant_pattern
            (identifier))
          (block
            (pass_statement)))
        (match_arm
          (identifier)
          (block
            (pass_statement)))
        (else_arm
          (block
            (pass_statement))))
      (match_statement
        (identifier)
        (else_arm
          (block
            (pass_statement)))))))

====================
Match patterns
====================

fn f():
    match s:
        (0, -1.5, true):
            pass
        [a, _, "x",]:
            pass
        .some((.none, [])):
            pass

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (match_statement
        (identifier)
        (match_arm
          (tuple_pattern
            (integer)
            (negative_pattern
              (float))
            (boolean))
          (block
            (pass_statement)))
        (match_arm
          (array_pattern
            (identifier)
            (discard)
            (string
              (string_content)))
          (block
            (pass_statement)))
        (match_arm
          (variant_pattern
            (identifier)
            (tuple_pattern
              (variant_pattern
                (identifier))
              (array_pattern)))
          (block
            (pass_statement)))))))

====================
Function in a function
====================

fn f(n: i32) -> i32:
    fn double(x: i32) -> i32:
        return x * 2
    fn(i32).size
    return double(n)

---

(source_file
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (named_type
          (identifier))))
    (named_type
      (identifier))
    (block
      (function_declaration
        (identifier)
        (parameters
          (parameter
            (identifier)
            (named_type
              (identifier))))
        (named_type
          (identifier))
        (block
          (expression_statement
            (return_expression
              (binary_expression
                (identifier)
                (integer))))))
      (expression_statement
        (field_expression
          (function_type
            (parameter_types
              (named_type
                (identifier))))
          (identifier)))
      (expression_statement
        (return_expression
          (call_expression
            (identifier)
            (arguments
              (identifier))))))))
